--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 		display:inline-block;
 		width:100px;
 		height:100px;
-		border-radius:50%;
+		border-radius:8%;
 		margin-bottom:20px;
-		box-shadow: 0 0 0 5px #fff, 0 0 0 6px #eee;
+		box-shadow: 0 0 14px rgba(0, 0, 0, 0.9);
 	}
 	#icon {
 		width:36px;
