add title to social icons

--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
 		</header> <!--header-->
 
 		<p>
-			<a href="https://twitter.com/ejrope"><img id="icon" src="img/icons/svg/twitter_circle_color.svg" alt="twitter"></a> 
-			<a href="https://github.com/ejrope"><img id="icon" src="img/icons/svg/github_circle_color.svg" alt="GitHub"></a>
-			<a href="https://www.linkedin.com/in/ejrope"><img id="icon" src="img/icons/svg/linkedin_circle_color.svg" alt="LinkedIn">
-			<a href="https://play.google.com/store/apps/developer?id=ejrope"><img id="icon" src="img/icons/svg/google_play_color.svg" alt="Google Play"></a>
-			<a href="https://plus.google.com/+EmilioJRodríguez"><img id="icon" src="img/icons/svg/google_plus_circle_color.svg" alt="Google+"></a>
-			<a href="mailto:ejrope@gmail.com"><img id="icon" src="img/icons/svg/email_circle.svg" alt="email"></a> 
+			<a title="Twitter" href="https://twitter.com/ejrope"><img id="icon" src="img/icons/svg/twitter_circle_color.svg" alt="twitter"></a> 
+			<a title="GitHub" href="https://github.com/ejrope"><img id="icon" src="img/icons/svg/github_circle_color.svg" alt="GitHub"></a>
+			<a title="LinkedIn" href="https://www.linkedin.com/in/ejrope"><img id="icon" src="img/icons/svg/linkedin_circle_color.svg" alt="LinkedIn">
+			<a title="Google Play" href="https://play.google.com/store/apps/developer?id=ejrope"><img id="icon" src="img/icons/svg/google_play_color.svg" alt="Google Play"></a>
+			<a title="Google+" href="https://plus.google.com/+EmilioJRodríguez"><img id="icon" src="img/icons/svg/google_plus_circle_color.svg" alt="Google+"></a>
+			<a title="email" href="mailto:ejrope@gmail.com"><img id="icon" src="img/icons/svg/email_circle.svg" alt="email"></a> 
 		</p>
 
 	</section> <!--wrapper-->
