Add IT profile description

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 		<header id="header">
 			<img id="avatar" src="img/avatar_github.png"/>
 			<h1>Emilio J. Rodríguez</h1>
-			<h2>Digital Banking Analyst | JSP & Web & Android Developer</h2>
+			<h2>IT & Digital Banking Analyst | JSP & Web & Android Developer</h2>
 			<h3>...but above all DAD</h3>
 			
 		</header> <!--header-->
